# aureum

./: ARCHITECTURE.md  AUREUM_EVERYWHERE.md  AUREUM_TINY.md  CERTIFICACAO_REPL.md  CREDITOS_ADICIONADOS.txt  CREDITS.md  EXECUCAO_FINAL.txt  MEMORY_BENCHMARK.md  OPENSOURCE.md  PERFORMANCE.md  PYTHON_INTEGRATION.md  PYTHON_QUICKSTART.md  QUICKSTART.md  QUICK_TEST_REPL.txt  README.md  REPL_SUMMARY.txt  RESUMO_FINAL.txt  SIMD_OPTIMIZATION.md  SOCIAL_IMPACT.md  TESTE_VERDADE_MATEMATICA.md  VALIDATION_REPORT.md  __init__.py  requirements.txt  setup.py  shell.py  test_novos_operadores.py  test_python_integration.py  test_stdlib.py  torch_compat.py
aureum/: AUTHOR.md  COMO_EXECUTAR.md  CONQUISTAS.md  CONTRIBUTING.md  DEPLOYMENT.md  ELASTIC_SOFTWARE.md  GETTING_STARTED.txt  GHOST_INTEGRATION_SUMMARY.md  GREEN_AI.md  HARDWARE_INVERSO.md  LICENSE  MIGRATION_GUIDE.md  NOVOS_RECURSOS.md  OPENSOURCE_SETUP.txt  RESUMO_EXECUTIVO.txt  STATUS.md  SUMMARY.txt  TEST_RESULTS.txt  demo.py  fast.py  green.py  main.py  numpy_compat.py  shell.py  test_compiler.py  test_elastic.py  test_repl.py  test_repl_simple.py  test_verdade_matematica.py
aureum/backend/: build_all.sh
aureum/backend/examples/: memory_benchmark.rs
aureum/backend/src/: ffi.rs  lib.rs  memory_demo.rs  stdlib.rs  stdlib_ffi.rs  wasm.rs
aureum/examples/: benchmark.rs  energy_benchmark.py  inferencia.aur  migration_pytorch.py  modelo_completo.aur  operadores_simples.aur  stdlib_demo.py  stdlib_nativa.aur  teste.rs  tutorial.aur
aureum/frontend/: aureum_ffi.py  aureum_stdlib.py  elastic.py  grammar.lark
aureum/tiny/: Cargo.toml
aureum/tiny/examples/: arduino_sensor.ino
aureum/tiny/src/: lib.rs
backend/: Cargo.toml  build_arm.sh  build_riscv.sh  build_wasm.sh
backend/src/: elastic.rs
examples/: benchmark.aur  benchmark_comparison.py  browser_demo.html  inferencia.rs  migration_numpy.py  modelo_completo.rs  operadores_avancados.aur  operadores_simples.rs  stdlib_simples.aur  stdlib_simples.rs  tensores_multidimensionais.aur  teste.aur
frontend/: aureum_compiler.py
tiny/: aureum_tiny.h
tiny/examples/: esp32_camera.ino  wearable_health.ino
